--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">Home Page</span></p>
+<p class="p1"><span class="s1">Home</span></p>
 <h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Ionic Menu Hejsan svejsan Starterssjjskjskjkjskjs</b></span></h3>
 <p class="p3"><span class="s1">If you get lost, the <a href="http://ionicframework.com/docs/v2"><span class="s2">docs</span></a> will show you the way.<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s3">Toggle Menu</span><span class="s4"><span class="Apple-converted-space"> </span></span></p>
