Kommenterat koden lite

--- a/src/pages/field/field.html
+++ b/src/pages/field/field.html
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Field</ion-title>
+    <ion-title>Fotbollsplan</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+<h1>Här ska det finnas information om fotbollsplaner.</h1>
 
 </ion-content>
