--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,34 +1,28 @@
-
 <ion-header>
-    <ion-navbar>
-      <ion-title>Testsida för ny fotbollsplan</ion-title>
-    </ion-navbar>
-  </ion-header>
-  
-  <ion-content>
-  
-    <ion-list>
-  
-      <ion-item>
-        <ion-label floating>Namn på fotbollsplan</ion-label>
-        <ion-input type="text" #fieldName value=""></ion-input>
-      </ion-item>
-  
-    </ion-list>
-  
-    <div padding>
-      <button ion-button color="primary" block (click)="createField()">Registrera fotbollsplan</button>
-    </div>
+  <ion-navbar>
+    <ion-title>Testsida för ny fotbollsplan</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content>
+
+  <ion-list>
 
     <ion-item>
-        <ion-label floating>Sök fotbollsplan</ion-label>
-        <ion-input type="text" #fieldName value=""></ion-input>
-      </ion-item>
+      <ion-label floating>Namn på fotbollsplan</ion-label>
+      <ion-input type="text" #fieldName value=""></ion-input>
+    </ion-item>
 
-    <div padding>
-        <button ion-button color="primary" block (click)="getField()">Sök</button>
-      </div>
+  </ion-list>
+
+  <div padding>
+    <button ion-button color="primary" block (click)="createField()">Registrera fotbollsplan</button>
+  </div>
+  
+  <div padding>
+    <button ion-button color="secondary" block (click)="showField()">Till fotbollsplan</button>
+  </div>
 
 
-    
-  </ion-content>
+
+</ion-content>
