--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
   </div>
   
   <div padding>
-    <button ion-button color="secondary" block (click)="showField()">Till fotbollsplan</button>
+    <button ion-button color="secondary" block (click)="showField()">Visa fotbollsplan</button>
   </div>
 
 
