--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,6 +23,8 @@
     <button ion-button color="secondary" block (click)="showField()">Visa fotbollsplan</button>
   </div>
 
+  <button ion-button full (click)="skapa()">Skapa planer</button>
+
 
 
 </ion-content>
