--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,25 +6,38 @@
 
 <ion-content>
 
-  <ion-list>
-
-    <ion-item>
-      <ion-label floating>Namn på fotbollsplan</ion-label>
-      <ion-input type="text" #fieldName value=""></ion-input>
-    </ion-item>
-
-  </ion-list>
-
   <div padding>
-    <button ion-button color="primary" block (click)="createField()">Registrera fotbollsplan</button>
+
+
+    <ion-list>
+
+      <ion-item>
+        <ion-label floating>Namn på fotbollsplan</ion-label>
+        <ion-input type="text" #fieldName value=""></ion-input>
+      </ion-item>
+
+    </ion-list>
+
+
+    <button ion-button color="primary" block (click)="createField()">lägg till</button>
+
+
+
+    <ion-list>
+
+      <ion-item>
+        <ion-label floating>Sök efter namn på fotbollsplan</ion-label>
+        <ion-input type="text" #searchValue value=""></ion-input>
+      </ion-item>
+
+    </ion-list>
+
+    <button ion-button full (click)="getField()">Sök</button>
+
+    <ion-list id="fieldList">
+
+    </ion-list>
+
+
   </div>
-  
-  <div padding>
-    <button ion-button color="secondary" block (click)="showField()">Visa fotbollsplan</button>
-  </div>
-
-  <button ion-button full (click)="skapa()">Skapa planer</button>
-
-
-
 </ion-content>
